# cjm-transcript-decomp-core

./: .gitignore  README.md  alignment.html  alignment.html.md  capabilities_test.yaml  cjm.yaml  cli.html  cli.html.md  graph.html  graph.html.md  index.html  index.html.md  models.html  models.html.md  pipeline.html  pipeline.html.md  plugins_test.yaml  pyproject.toml  robots.txt  search.json  sitemap.xml
cjm_transcript_decomp_core/: _modidx.py  alignment.py  cli.py  graph.py  models.py  pipeline.py
nbs/: alignment.ipynb  cli.ipynb  graph.ipynb  index.ipynb  models.ipynb  nbdev.yml  pipeline.ipynb
tests/: test_alignment.py  test_cli.py  test_graph.py  test_models.py  test_pipeline.py
tests_manual/: measure_cold_fanout_overlap_e2e.py  validate_stage7_volume_journal_e2e.py
