[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-transcript-decomp-core"
dynamic = ["version"]
description = "A frontend-agnostic core for the transcript decomposition workflow — composes isolated capability workers (forced alignment, VAD, graph storage) into a headless pipeline that decomposes transcription run manifests into a VAD-aligned context-graph spine with traceable provenance, and a CLI as its first driver."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ['cjm_plugin_system>=0.0.45', 'cjm_graph_plugin_system>=0.0.23', 'cjm_context_graph_primitives>=0.0.9', 'cjm_media_plugin_system>=0.0.20', 'cjm_forced_alignment_adapter_interface>=0.0.7', 'cjm-context-graph-layer>=0.0.4', 'cjm-transcript-graph-schema>=0.0.4']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-transcript-decomp-core"
Documentation = "https://cj-mills.github.io/cjm-transcript-decomp-core/"

[project.scripts]
cjm-transcript-decomp-core = "cjm_transcript_decomp_core.cli:main"

[project.entry-points.nbdev]
cjm_transcript_decomp_core = "cjm_transcript_decomp_core._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_transcript_decomp_core.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_transcript_decomp_core*"]

[tool.nbdev]
